refactor to move all script files to scripts folder

--- a/auth.html
+++ b/auth.html
@@ -23,7 +23,7 @@
     </form>
     <!-- <div id="hide"><p>Hide Me</p></div> -->
 </body>
-<script src="./auth.js"></script>
+<script src="./scripts/auth.js"></script>
 <script>
 let form = document.querySelector("form");
 form.addEventListener("submit", event => {
