--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </form>
 </body>
 <script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="./tranxMultiFetch.js"></script>
+<script src="./scripts/tranxMultiFetch.js"></script>
 <script>
   let form = document.querySelector("form");
   form.addEventListener("submit", event => {
