refactor to use arrow functions and remove log

--- a/listTranx.html
+++ b/listTranx.html
@@ -56,9 +56,8 @@
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="./scripts/listTranx.js"></script>
 <script>
-  document.getElementById("getTranx").onclick = function bTranx() {
+  document.getElementById("getTranx").onclick = () => {
     buildTransactions();
   }
-  console.log('getTranx', getTranx)
 </script>
 </html>
